--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "martin-instalacoes",
+  "homepage": "https://martininst.com.br",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
