--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-scripts": "3.4.3",
     "react-use": "^15.3.4",
     "reactstrap": "^8.6.0",
+    "source-map-explorer": "^2.5.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
